# 296-Serving-DNNs-Like-Clockwork-Performance-Predictability-from-the-Bottom-Up

./: citation.txt
clockwork/: .gitignore  CMakeLists.txt  LICENSE  README.md
clockwork-results/: README.md
clockwork-results/docker/: Dockerfile  build  run
clockwork-results/sec61_fig5/: README.md  process.py  run.sh  run_in_background.sh
clockwork-results/sec62_fig6/: README.md  process_action_log.py  process_request_log.py  run.sh  run_in_background.sh
clockwork-results/sec63_fig7/: README.md  plotter.py  run.sh  run_in_background.sh
clockwork-results/sec64_fig8/: README.md  plotter.py  plotter1.py  run.sh  run_in_background.sh
clockwork-results/sec65_fig9_fig10/: README.md  a.py  download.sh  process.py  run.sh  run_in_background.sh
clockwork-results/sec65_fig9_fig10/graphs/: client_tail_cdf_data.tsv  timeseries_data.tsv
clockwork-results/sec66_fig11/: README.md  process.py  run.sh  run_in_background.sh
clockwork-results/sec66_fig11/data/: 11a_goodput_median_40_workers.tsv  11b_goodput_median_aggregate.tsv  plotter.py
clockwork-results/setup/: Dockerfile  environment  host_docker.sh  host_setup.sh
clockwork/config/: default.cfg  model.measurements.example
clockwork/docs/: building.md  configuration.md  controller.md  customizing.md  environment.md  firstrun.md  prerequisites.md  telemetry.md  troubleshooting.md  withoutgpus.md  workflow.md  workloads.md
clockwork/include/clockwork/: client.h  cuda_common.h  modeldef.h  telemetry.h
clockwork/include/clockwork/api/: api_common.h  client_api.h  worker_api.h
clockwork/profile/: profile.cpp
clockwork/profile/clockwork/profile/: check.cpp  compression.cpp
clockwork/profile/clockwork/profile/alternatives/: profilegreedy.cpp
clockwork/profile/clockwork/profile/model/: profilecuda.cpp  profilemodel.cpp
clockwork/proto/: clockwork.proto
clockwork/src/: check_model.cpp  client.cpp  controller.cpp  inflate.cpp  simpleclient.cpp  worker.cpp  worker_dummy.cpp
clockwork/src/clockwork/: action.cpp  action.h  cache.cpp  cache.h  client.cpp  common.cpp  common.h  config.cpp  config.h  memory.cpp  memory.h  modeldef.cpp  priority_queue.h  runtime.cpp  runtime.h  sliding_window.h  task.cpp  task.h  thread.cpp  thread.h  util.cpp  util.h  worker.cpp  worker.h
clockwork/src/clockwork-convert/: convert.cpp  cudafatbin.cc  tvm_abstract_model.cpp  tvm_abstract_model.h  tvm_model.cpp  tvm_model.h
clockwork/src/clockwork/alternatives/: alternatives.h  greedyruntime.cpp  greedyruntime.h  model_manager.cpp  model_manager.h  runtime_model.cpp  runtime_model.h  threadpoolruntime.cpp  threadpoolruntime.h  worker.cpp  worker.h
clockwork/src/clockwork/api/: client_api.cpp  worker_api.cpp
clockwork/src/clockwork/controller/: concurrent_infer_and_load_scheduler.cpp  concurrent_infer_and_load_scheduler.h  controller.cpp  controller.h  direct_controller.cpp  direct_controller.h  load_tracker.cpp  load_tracker.h  scheduler.cpp  scheduler.h  smart_scheduler.cpp  smart_scheduler.h  stress_test_controller.h  worker_tracker.h
clockwork/src/clockwork/controller/infer5/: common.cpp  common.h  infer5_scheduler.cpp  infer5_scheduler.h  load_tracker.cpp  load_tracker.h  queues.h
clockwork/src/clockwork/dummy/: action_dummy.cpp  action_dummy.h  memory_dummy.cpp  memory_dummy.h  worker_dummy.cpp  worker_dummy.h
clockwork/src/clockwork/dummy/network/: worker_dummy.cpp  worker_dummy.h
clockwork/src/clockwork/model/: batched.cpp  batched.h  cuda.cpp  cuda.h  memfile.cpp  memfile.h  model.cpp  model.h  so.cpp  so.h
clockwork/src/clockwork/network/: client.cpp  client.h  client_api.cpp  client_api.h  controller.cpp  controller.h  message.h  network.cpp  network.h  rpc.h  worker.cpp  worker.h  worker_api.h
clockwork/src/clockwork/telemetry/: action_telemetry_logger.h  client_telemetry_logger.h  controller_action_logger.h  controller_request_logger.h  task_telemetry_logger.h  telemetry.cpp
clockwork/src/clockwork/workload/: azure.h  example.h  scalability.h  slo.h  workload.cpp  workload.h
clockwork/src/network/: netclient.cpp  netcontroller.cpp
clockwork/test/clockwork/test/: actions.cpp  actions.h  controller.h  telemetry.h  testaction.cpp  testcache.cpp  testclient.cpp  testconfig.cpp  testmemory.cpp  testnetwork.cpp  testpriorityqueue.cpp  testtask.cpp  testtelemetry.cpp  testutil.cpp  testworker.cpp  util.cpp  util.h
clockwork/test/clockwork/test/model/: testbatched.cpp  testmodel.cpp
clockwork/test/clockwork/test_dummy/: actions.cpp  actions.h  testaction.cpp  testmemory.cpp  testworker.cpp
setup/: Dockerfile  client.yaml  controller.yaml  host_docker.sh  host_get_models.sh  host_get_trace.sh  nvidia-device-plugin.yml  worker.yaml
setup/ssh/: authorized_keys
